Issue-458: replace deprecated reflective class instantiator
Signed-off-by: l-1squared <30831153+l-1squared@users.noreply.github.com>